1. Collection API Улучшения.